# openvino.genai

./: .gitmodules  CMakeLists.txt
image_generation/LCM/cpp/: CMakeLists.txt
image_generation/LCM/cpp/scripts/: convert_lcm_model.py  text_embeddings.txt
image_generation/LCM/cpp/src/: LCM_pipeline.hpp  lcm_scheduler.hpp  main.cpp
image_generation/stable_diffusion_1_5/cpp/src/: lcm_scheduler.hpp  main.cpp  stable_diffusion.hpp
llm/chatglm_cpp/: chatglm.cpp
llm/glm4_cpp/: CMakeLists.txt  glm4.cpp
llm/llama_cpp/: llama.cpp
llm/minicpm_cpp/: minicpm.cpp
llm/mistral_cpp/: CMakeLists.txt  mistral.cpp
llm/phi_cpp/: CMakeLists.txt  phi.cpp
llm/qwen_cpp/: qwen.cpp
samples/cpp/text_generation/: CMakeLists.txt  gguf_example.cpp
samples/cpp/visual_language_chat/: CMakeLists.txt  benchmark_vlm_pld.cpp  benchmark_vlm_pld_acc.cpp  benchmark_vlm_pld_acc_compare.cpp  benchmark_vlm_text_only.cpp  visual_language_chat.cpp
src/cpp/src/: llm_pipeline.cpp  llm_pipeline_stateful.cpp  llm_pipeline_stateful.hpp  lm_encoding.cpp  lm_encoding.hpp  tokenizer.cpp  utils.cpp  utils.hpp
src/cpp/src/gguf_utils/: gguf_modeling.cpp  gguf_modeling.hpp
src/cpp/src/visual_language/: inputs_embedder.cpp  inputs_embedder.hpp  pipeline.cpp  vision_encoder.cpp  vlm_config.cpp  vlm_config.hpp
src/cpp/src/visual_language/gemma3/: classes.cpp  classes.hpp
text_generation/causal_lm/cpp/: CMakeLists.txt  README.md  export_ov_tokenizer.py  llm.cpp
